# all-things-rag

./: AGENTS.md  README.md  pyproject.toml  tutorial.txt
data/: documents.jsonl  handbook_manual.txt  queries.jsonl
scripts/: generate_data.py  smoke_imports.py
src/rag_tutorials/: __init__.py  agent_loop.py  agent_state.py  chunking.py  data_generation.py  embeddings.py  evaluation.py  io_utils.py  pipeline.py  qa.py  reflection.py  reranking.py  retrieval.py  schema.py  settings.py  tracing.py  vector_store.py
tests/: conftest.py  test_agent_loop.py  test_agent_state.py  test_chunking.py  test_data_generation.py  test_embeddings.py  test_evaluation.py  test_io_utils.py  test_pipeline.py  test_qa.py  test_reflection.py  test_reranking.py  test_retrieval.py  test_schema.py  test_settings.py  test_tracing.py  test_vector_store.py
tutorials/: 01_basic_rag.ipynb  02_semantic_chunking.ipynb  03_reranking.ipynb  04_hybrid_search.ipynb  05_rag_comparison.ipynb  06_react_agent.ipynb  07_reflection_agent.ipynb  08_state_management.ipynb  09_llm_tracing.ipynb  09_tracing_with_phoenix.ipynb
